one thing at a time, fixing home screen lets deploy and see if pushing to the top fixed dead scroll on mobile

--- a/billy-port/src/App.css
+++ b/billy-port/src/App.css
@@ -1,26 +1,3 @@
-/* font-family: 'Smythe', sans-serif;
-font-family: 'Gayathri', sans-serif;
-font-family: 'Lexend Tera', sans-serif;
-font-family: 'Metrophobic', sans-serif;
-font-family: 'Montserrat', sans-serif;
-font-family: 'MuseoModerno', sans-serif;
-font-family: 'Playfair Display', serif;
-font-family: 'Poppins', sans-serif;
-font-family: 'Roboto Flex', sans-serif;
-font-family: 'Roboto Mono', monospace;
-font-family: 'Source Code Pro', monospace;
-font-family: 'Space Mono', monospace;
-font-family: 'IBM Plex', sans;
-font-family: 'IBM Plex', monospace;
-font-family: 'Space Grotesk', sans-serif;
-font-family: 'Syne', sans-serif; 
-font-family: 'Inknut Antiqua', serif;
-font-family: 'Syne', sans-serif; 
-font-family: 'Cormorant', serif;
-font-famiily: 'Manrope', sans-serif; */
-  
-
-
 
 @font-face {
   font-family: 'Gerbil';
@@ -84,7 +61,7 @@ body {
 
   @media screen and (max-width: 1200px) {
     height: auto;
-    
+    min-height: 100vh;
   }
 }
 
@@ -98,7 +75,15 @@ body {
   background-image: var(--background-image);
 }
 
+.home {
+  min-height: 100vh;
+}
 
+.home-wrapper {
+  @media screen and (max-width: 1200px) {
+    margin-top: 10vh;
+  }
+}
 
 .home-container {
   display: flex;
@@ -135,10 +120,17 @@ body {
   }
 }
 
+
+@media screen and (min-width: 2000px) {
+  .home-content {
+    padding-top: 20%;
+  }
+  }
+
 h2 {
   font-family: 'March', sans-serif;
   font-weight: 100;
-  /* letter-spacing: 4px; */
+  letter-spacing: 4px;
   margin: 0px;
   font-size: 8vh;
 }
@@ -152,31 +144,25 @@ p {
 
 @media screen and (max-width: 1200px) {
   h2 {
-    font-size: 3vh;
-  }
-
-  p {
-    font-size: 1.6vh;
+    font-size: 6vh;
   }
 }
 
 .home-p {
-    font-family: 'Syne', sans-serif;
-    font-family: 'Kayak Sans Regular', sans-serif;
-      font-family: 'Face', sans-serif;
+    font-family: 'Face', sans-serif;
     font-weight: 400;
     margin-bottom: 1px;
     font-size: 2vh;
-  
-  @media screen and (max-width: 1200px) {
-    h2 {
-      font-size: 3vh;
+
+    @media screen and (max-width: 1200px)  {
+      font-size: 1vh;
+      min-width: 50%;
     }
-  
-    p {
-      font-size: 1.6vh;
+
+    @media screen and (min-width: 999px)  {
+      font-size: 2vh;
+      min-width: 50%;
     }
-  }
 }
 
 .main-link {
@@ -195,7 +181,6 @@ p {
 }
 
 a.link {
-  font-family: 'Syne', sans-serif; 
   font-family: 'March', sans-serif;
   letter-spacing: 0.5rem;
   color: var(--primary-text-color);
@@ -246,6 +231,17 @@ a.link {
   }
 }
 
+
+@media screen and (min-width: 2000px) {
+  .nav-container {
+    margin: 0;
+    display: flex;
+    justify-content: start;
+    padding-top: 6vh;
+    padding-left: 2.5vh;
+  }
+  }
+ 
 .navbar {
   display: flex;
   justify-content: flex-end;
@@ -265,8 +261,8 @@ a.link {
     display: flex;
     flex-direction: row;
     width: auto;
-    padding-top: 20px;
-    padding-left: 12px;
+    padding-top: 3rem;
+    padding-left: 0.9rem;
   }
 }
 
@@ -308,6 +304,6 @@ a.side-link {
   font-size: 2.2vh;
 
   @media screen and (max-width: 1200px) {
-    font-size: 1.4vh;
+    font-size: 2vh;
   }
 }
